# sysctrlcmd

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs  linux.rs  mac.rs  windows.rs
