[package]
name = "sysctrlcmd"
version = "0.1.0"
edition = "2021"

# Common dependencies

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["reboot"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "powrprof"] }

# MacOS-specific dependencies
