[package]
name = "sysctrlcmd"
version = "1.0.2"
authors = ["SourM1lk <soursoursoursour@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "System Commands for Linux, Windows, and MacOS (logoff, shutdown, reboot, etc.)"
repository = "https://github.com/SourM1lk/sysctrlcmd"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["reboot"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "powrprof", "securitybaseapi", "processthreadsapi", "errhandlingapi", "winbase"] }

# MacOS-specific dependencies
